# estadistica-python

./: .gitignore  README.md  index.html  pyproject.toml
assets/: custom.css  custom_v2.css
data/raw/: Data_FMI.csv  Data_FMI.xlsx
docs/: Estadistica-Python_CENACE.docx
exercises/05_estadistica_descriptiva/: exercise_05_solution.py  exercise_05_template.py
exercises/06_estadistica_inferencial/: exercise_06_solution.py  exercise_06_template.py
live/: lecture_05_live.py  lecture_06_live.py
notebooks/: 03_analisis_datos_pandas_notebook.ipynb
scripts/: quarto-wrapper.sh
slides/: _metadata.yml
slides/01_Instalacion/: lecture_01_Python_Instalacion.qmd
slides/02_fundamentos_python/: lecture_02_fundamentos_python.html  lecture_02_fundamentos_python.qmd
slides/03_analisis_python/: lecture_03_analisis-python.html  lecture_03_analisis-python.qmd
slides/04_dataviz/: lecture_04_visualizacion.qmd
slides/05_estadistica_descriptiva/: lecture_05_estadistica_descriptiva.qmd
slides/06_estadistica_inferencial/: lecture_06_estadistica_inferencial.qmd
slides/xx_muestreo_hipotesis/: lecture_xx_muestreo_hipotesis.qmd
slides/xx_variables_aleatorias/: lecture_xx_variables_aleatorias.qmd
src/estadistica_python_cenace/: __init__.py  descriptive.py  inference.py  plotting.py  simulation.py
