[project]
name = "estadistica-python-cenace"
version = "0.1.0"
description = "Curso de estadística en Python para CENACE"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "openpyxl",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "jupyter",
    "ipykernel",
    "plotly",
    "tabulate",
    "pyarrow",
    "pyyaml",
]

[tool.uv]
python-preference = "managed"
python-downloads = "automatic"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/estadistica_python_cenace"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
